--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>modules/client</module>
 		<module>modules/server</module>
+		<module>modules/frontend</module>
 	</modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
