--- a/modules/server/pom.xml
+++ b/modules/server/pom.xml
@@ -13,6 +13,14 @@
     <artifactId>server</artifactId>
     <name>StartHRM Server</name>
 
+    <properties>
+        <src.dir>src</src.dir>
+    </properties>
+
+    <build>
+        <sourceDirectory>${src.dir}</sourceDirectory>
+    </build>
+
     <dependencies>
 
         <dependency>
@@ -47,6 +55,7 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.10.2</version>
         </dependency>
+
     </dependencies>
 
 </project>
