Added tests to PeselValidator. Refactor maven structure. Added junit-jupiter-engine dependency.

--- a/modules/frontend/pom.xml
+++ b/modules/frontend/pom.xml
@@ -14,5 +14,13 @@
   <artifactId>frontend</artifactId>
   <name>StartHRM Frontend</name>
 
+  <properties>
+    <src.dir>src</src.dir>
+  </properties>
+
+  <build>
+    <sourceDirectory>${src.dir}</sourceDirectory>
+  </build>
+
 
 </project>
